# cxx-json-rpc

./: .codecov.yml  .pre-commit-config.yaml  CMakeLists.txt  LICENSE
cmake/: jsonrpccxxConfig.cmake.in
examples/: CMakeLists.txt  cpphttplibconnector.hpp  http.cpp  inmemoryconnector.hpp  memory.cpp  websocket.cpp  websocketconnector.hpp
examples/warehouse/: http.cpp  main.cpp  memory.cpp  types.h  warehouse.cpp  warehouseapp.cpp  warehouseapp.hpp  websocket.cpp
include/cxx/jsonrpc/: batch.hpp  client.hpp  dispatcher.hpp  exception.hpp  export.hpp  iclientconnector.hpp  server.hpp  typemapper.hpp
include/jsonrpccxx/: batch.hpp  batchclient.hpp  client.hpp  common.hpp  dispatcher.hpp  error_code.hpp  exception.hpp  iclientconnector.hpp  server.hpp  typemapper.hpp
test/: CMakeLists.txt  batchclient.cpp  client.cpp  common.cpp  dispatcher.cpp  integrationtest.hpp  server.cpp  testclientconnector.hpp  testserverconnector.hpp  typemapper.cpp  warehouseapp.cpp
