if(NOT TARGET ixwebsocket::ixwebsocket)
  find_package(ixwebsocket QUIET)
  if(JSONRPCCXX_ALLOW_FETCHING)
    include(FetchContent)
    FetchContent_Declare(ixwebsocket GIT_REPOSITORY https://github.com/machinezone/IXWebSocket.git GIT_TAG v11.4.6)
    set(USE_ZLIB FALSE)
    FetchContent_MakeAvailable(ixwebsocket)
    unset(USE_ZLIB)
  endif()
endif()

if(NOT TARGET httplib::httplib)
  find_package(httplib QUIET)
  if(JSONRPCCXX_ALLOW_FETCHING)
    include(FetchContent)
    FetchContent_Declare(httplib GIT_REPOSITORY https://github.com/yhirose/cpp-httplib.git GIT_TAG v0.37.1)
    FetchContent_MakeAvailable(httplib)
  endif()
endif()

add_library(warehouse SHARED warehouse/warehouse.cpp warehouse/warehouse.hpp warehouse/types.h)
target_include_directories(warehouse PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/warehouse>)
target_link_libraries(warehouse PUBLIC json-rpc-cxx::json-rpc-cxx)


add_executable(example-warehouse-inmemory memory.cpp inmemoryconnector.hpp)
#target_compile_options(example-warehouse-inmemory PUBLIC "${_warning_opts}")
target_link_libraries(example-warehouse-inmemory PRIVATE warehouse)
target_include_directories(example-warehouse-inmemory PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}")
add_test(NAME example-warehouse-inmemory COMMAND example-warehouse-inmemory)

add_executable(example-warehouse-http http.cpp)
#target_compile_options(example-warehouse-http PUBLIC "${_warning_opts}")
target_link_libraries(example-warehouse-http PRIVATE httplib::httplib warehouse)
target_include_directories(example-warehouse-http PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}")
add_test(NAME example-warehouse-http COMMAND example-warehouse-http)

add_executable(example-warehouse-websocket websocket.cpp)
#target_compile_options(example-warehouse-websocket PUBLIC "${_warning_opts}")
target_link_libraries(example-warehouse-websocket PRIVATE ixwebsocket::ixwebsocket warehouse)
target_include_directories(example-warehouse-websocket PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}")
add_test(NAME example-warehouse-websocket COMMAND example-warehouse-http)
