if(NOT TARGET ixwebsocket::ixwebsocket)
  find_package(ixwebsocket QUIET)
  if(CXX_JSONRPC_ALLOW_FETCHING)
    include(FetchContent)
    FetchContent_Declare(ixwebsocket GIT_REPOSITORY https://github.com/machinezone/IXWebSocket.git GIT_TAG v11.4.6)
    set(USE_ZLIB FALSE)
    FetchContent_MakeAvailable(ixwebsocket)
    unset(USE_ZLIB)
  endif()
endif()

if(NOT TARGET httplib::httplib)
  find_package(httplib QUIET)
  if(CXX_JSONRPC_ALLOW_FETCHING)
    include(FetchContent)
    FetchContent_Declare(httplib GIT_REPOSITORY https://github.com/yhirose/cpp-httplib.git GIT_TAG v0.37.1)
    FetchContent_MakeAvailable(httplib)
  endif()
endif()

add_library(warehouse STATIC warehouse/warehouse.cpp warehouse/warehouse.hpp warehouse/types.h)
target_include_directories(warehouse PUBLIC $<BUILD_INTERFACE:${CMAKE_CURRENT_SOURCE_DIR}/warehouse>)
target_link_libraries(warehouse PUBLIC cxx-jsonrpc::cxx-jsonrpc)

add_executable(example-inmemory memory.cpp inmemoryconnector.hpp)
#target_compile_options(example-inmemory PUBLIC "${_warning_opts}")
target_link_libraries(example-inmemory PRIVATE warehouse)
target_include_directories(example-inmemory PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}")
add_test(NAME example-inmemory COMMAND example-warehouse-inmemory)

add_executable(example-http http.cpp)
#target_compile_options(example-http PUBLIC "${_warning_opts}")
target_link_libraries(example-http PRIVATE httplib::httplib warehouse)
target_include_directories(example-http PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}")
add_test(NAME example-http COMMAND example-http)

add_executable(example-websocket websocket.cpp)
#target_compile_options(example-websocket PUBLIC "${_warning_opts}")
target_link_libraries(example-websocket PRIVATE ixwebsocket::ixwebsocket warehouse)
target_include_directories(example-websocket PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}")
add_test(NAME example-websocket COMMAND example-http)
