if(JSONRPCCXX_CODE_COVERAGE)
  add_library(jsonrpccxx_coverage_config INTERFACE)
  message(STATUS "Enabled coverage flags")
  target_compile_options(jsonrpccxx_coverage_config INTERFACE -O0 -g --coverage)
  target_link_libraries(jsonrpccxx_coverage_config INTERFACE --coverage)
endif()

if(NOT TARGET doctest::doctest)
  find_package(doctest QUIET)
  if(JSONRPCCXX_ALLOW_FETCHING)
    include(FetchContent)
    FetchContent_Declare(doctest GIT_REPOSITORY https://github.com/doctest/doctest.git GIT_TAG v2.4.12)
    FetchContent_MakeAvailable(doctest)
  endif()
endif()

add_executable(jsonrpccpp-test main.cpp client.cpp typemapper.cpp dispatcher.cpp server.cpp batchclient.cpp testclientconnector.hpp warehouseapp.cpp common.cpp)
target_compile_options(jsonrpccpp-test PUBLIC "${_warning_opts}")
target_include_directories(jsonrpccpp-test PRIVATE examples)
target_link_libraries(jsonrpccpp-test PRIVATE $<$<BOOL:${JSONRPCCXX_CODE_COVERAGE}>:jsonrpccxx_coverage_config> json-rpc-cxx::json-rpc-cxx doctest::doctest warehouse)
add_test(NAME jsonrpccpp-test COMMAND jsonrpccpp-test)
