if(CXX_JSONRPC_CODE_COVERAGE)
  add_library(jsonrpc_coverage_config INTERFACE)
  message(STATUS "Enabled coverage flags")
  target_compile_options(jsonrpc_coverage_config INTERFACE -O0 -g --coverage)
  target_link_libraries(jsonrpc_coverage_config INTERFACE --coverage)
endif()

if(NOT TARGET doctest::doctest)
  find_package(doctest QUIET)
  if(CXX_JSONRPC_ALLOW_FETCHING)
    include(FetchContent)
    FetchContent_Declare(doctest GIT_REPOSITORY https://github.com/doctest/doctest.git GIT_TAG v2.4.12)
    FetchContent_MakeAvailable(doctest)
  endif()
endif()

add_executable(jsonrpc-test main.cpp client.cpp typemapper.cpp dispatcher.cpp server.cpp batchclient.cpp testclientconnector.hpp warehouseapp.cpp common.cpp)
target_compile_options(jsonrpc-test PUBLIC "${_warning_opts}")
target_include_directories(jsonrpc-test PRIVATE examples)
target_link_libraries(jsonrpc-test PRIVATE $<$<BOOL:${CXX_JSONRPC_CODE_COVERAGE}>:jsonrpc_coverage_config> cxx-jsonrpc::cxx-jsonrpc doctest::doctest warehouse)
add_test(NAME jsonrpc-test COMMAND jsonrpccpp-test)
